[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zdt_stepper"
description = "Stepper motor control library"
version = "0.1.0"
authors = [{ name = "Yehe Liu", email = "yehe@opsiclear.com" }]
requires-python = ">=3.10"
dependencies = ["pyserial", "pyyaml", "tqdm"]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pre-commit", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["src/lazyimread"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "D",
    "UP",
    "S",
    "BLE",
    "FBT",
    "B",
    "C4",
    "PT",
    "Q",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["lazyimread"]

[tool.ruff.lint.pydocstyle]
convention = "google"
